fix: make proper align of left dropdown

--- a/packages/core/styles/components/dropdown.pcss
+++ b/packages/core/styles/components/dropdown.pcss
@@ -29,6 +29,7 @@
 
   &--right {
     ^&__menu {
+      left: inherit;
       right: 0;
     }
   }
@@ -41,6 +42,7 @@
     background-color: var(--ifm-dropdown-background-color);
     border-radius: var(--ifm-global-radius);
     box-shadow: var(--ifm-global-shadow-md);
+    left: 0;
     list-style: none;
     max-height: calc(100vh - var(--ifm-navbar-height));
     min-width: 10rem;
